- corrected typo in README