@@ -1,1 +1,2 @@
+- run and evaluate frequency 0 tests also with standard initialization
 - corrected typo in README
